はじめるをクリックするとおみくじ箱が斜めになり、それ以降は画像をクリックすると結果が出る。

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
      <link rel="stylesheet" href="css/style.css">
     
     <script>
+      //おみくじ箱を斜めにする
         function huru(){
            document.getElementById("saisyo").style["transform"] = "rotateZ(150deg)";
            document.getElementById("button").style["display"] = "none";
